src/css/main.css
/* Variables */
:root {
    --text-bg: #1b1b1b;
    --fore-bg: #38383a;
}

/* Youtube injections */

.ext-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
    height: 100%;
}

.applied-movie-player {
    position: relative !important;
    display: flex !important;
    justify-content: center !important;
    align-items: center !important;
}

.applied-html5-video-container {
    /* position: relative !important;
    display: flex !important;
    justify-content: center !important;
    align-items: center !important; */
    width: 100%;
}

.applied-video {
    position: relative !important;
    width: inherit !important;
    height: auto !important;
    left: auto !important;
    right: auto !important;
    top: auto !important;
}

/* .applied-ytp-chrome-bottom {
    width: 100% !important;
} */

/* Sidepanel */

.sidepanel-ctn {
    position: relative;
    display: flex;
    flex-direction: row;
    height: 100%;
    z-index: 10;
    box-shadow: -2px 0 6px rgba(0, 0, 0, 0.15);
}

.sidepanel-icon {
    fill: rgb(238, 238, 238);
    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.6));
}

.sidepanel-toggle {
    padding: 4px;
    padding-right: 2px;
}

.sidepanel-btn {
    position: absolute;
    left: 0px;
    transition: left 160ms ease-out;
    z-index: 100;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    top: 80px;
    height: 60px;
    width: 40px;
    background-color: var(--text-bg);

    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    cursor: pointer;
}

.sidepanel {
    background: var(--text-bg);
    width: 0px;
    height: 100% !important;
    height: max-content;
    z-index: 20;
    transition: width 250ms ease;
    overflow: hidden;
}
.resizing {
    transition: none !important;
}

.sidepanel-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 20;
    pointer-events: none;
}

.sidepanel-content {
    padding: 8px;
    color: white;
    font-size: 18px;
    margin-top: 24px;
    overflow: auto;
}

.status-text {
    color: white;
    opacity: 0.6;
}

.resize-handle {
    height: 100%;
    width: 10px;
    z-index: 80;
    position: absolute;
    left: -5px;
    cursor: ew-resize;
    background: transparent;
    opacity: 0.5;
}

.overlay-btn {
    background-color: var(--fore-bg);
    border-radius: 12px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
    padding: 8px;
    color: white;
}

.clickable {
    cursor: pointer;
    user-select: none;
    transition: filter 0.15s ease;
}

.clickable:hover {
    filter: brightness(1.25);
}

.circle {
    border-radius: 50%;
}

.sidepanel-overlay .clickable {
    pointer-events: auto; /* buttons or interactive stuff work */
}

.content {
    min-width: 100%;
    min-height: 100%;
    border: none !important;
}
.no-focus {
    outline: none;
}

.menu-bar-btn {
    border-right: 1px solid white;
}

